:bug: Move overflow hidden to flag object

--- a/_styles/scss/components/_event-list.scss
+++ b/_styles/scss/components/_event-list.scss
@@ -26,6 +26,7 @@
   &__flag {
     display: flex;
     flex-flow: column nowrap;
+    overflow: hidden;
 
     @include breakpoint(45rem) {
       flex-flow: row nowrap;
@@ -33,7 +34,7 @@
 
     &--left {
       flex: 3 1 0;
-      overflow: hidden;
+      position: relative;
 
       @include breakpoint(45rem) {
         display: flex;
